--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -138,7 +138,7 @@
     <h1 id="title">Loading title...</h1>
     
     <div class="image-container">
-        <img id="main-image" src="image.jpeg" alt="Example Image">
+        <img id="main-image" src="image.png" alt="Example Image">
     </div>
 
     <div id="content">
@@ -222,20 +222,23 @@
                         y += 10;
                     } else if (line.startsWith('Text: ')) {
                         doc.setFontSize(12);
-                        doc.text(line.replace('Text: ', ''), 20, y);
-                        y += 10;
+                        const textLines = doc.splitTextToSize(line.replace('Text: ', ''), 170); // Quebrando o texto longo
+                        doc.text(textLines, 20, y);
+                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
                     } else if (line.startsWith('Examples from the Creation Story:')) {
                         doc.setFontSize(12);
                         doc.text(line, 20, y);
                         y += 10;
                     } else if (line.startsWith('"')) {
                         doc.setFontSize(12);
-                        doc.text(line, 25, y);
-                        y += 10;
+                        const textLines = doc.splitTextToSize(line, 170); // Quebrando o texto longo
+                        doc.text(textLines, 25, y);
+                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
                     } else {
                         doc.setFontSize(12);
-                        doc.text(line, 20, y);
-                        y += 10;
+                        const textLines = doc.splitTextToSize(line, 170); // Quebrando o texto longo
+                        doc.text(textLines, 20, y);
+                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
                     }
 
                     if (y > doc.internal.pageSize.height - 20) {
