--- a/nivelA/unidade1/Grammar2/index.html
+++ b/nivelA/unidade1/Grammar2/index.html
@@ -138,7 +138,7 @@
     <h1 id="title">Loading title...</h1>
     
     <div class="image-container">
-        <img id="main-image" src="image.png" alt="Example Image">
+        <img id="main-image" src="image.jpeg" alt="Example Image">
     </div>
 
     <div id="content">
