--- a/nivelB/unidade1/index.html
+++ b/nivelB/unidade1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Unit 1 - Level A</title>
+    <title>Unit 1 - Level B</title>
     
     <style>
         /* Fonte substituída por Arial, que é universal */
@@ -136,7 +136,7 @@
     </style>
 </head>
 <body>
-    <h1>Unit 1 - Level A</h1>
+    <h1>Unit 1 - Level B</h1>
     
     <!-- Botões no topo da página -->
     <div class="buttons" style="margin-bottom: 20px;">
