--- a/nivelA/unidade2/index.html
+++ b/nivelA/unidade2/index.html
@@ -151,6 +151,7 @@
         <a href="../unidade2/StoryCards/index.html"><img src="../../imagens/botoes/storycards_button.png" alt="StoryCards"></a>
         <a href="../unidade2/Flashcards/index.html"><img src="../../imagens/botoes/flashcards_button.png" alt="Flashcards"></a>
         <a href="../unidade2/Flashcards2/index.html"><img src="../../imagens/botoes/flashcards_button.png" alt="Flashcards2"></a>
+        <a href="../unidade2/Flashcards3/index.html"><img src="../../imagens/botoes/flashcards_button.png" alt="Flashcards3"></a>
         <a href="../unidade2/MemoryGame/index.html"><img src="../../imagens/botoes/memorygame_button.png" alt="Memory Game"></a>
         <a href="../unidade2/MemoryGame2/index.html"><img src="../../imagens/botoes/memorygame_button.png" alt="Memory Game2"></a>
         <a href="../unidade2/QUIZ/index.html"><img src="../../imagens/botoes/quiz_button.png" alt="QUIZ"></a>
