--- a/nivelA/unidade2/Mixed Letters FIXO/index.html
+++ b/nivelA/unidade2/Mixed Letters FIXO/index.html
@@ -124,16 +124,16 @@
         try {
             const response = await fetch('data/words.txt');
             const text = await response.text();
-            const lines = text.trim().split('\n');
+            const words = text.trim().split('\n');
 
-            for (const line of lines) {
-                const [imageName, word] = line.split(':');
+            words.forEach((word, index) => {
+                const imageName = `imagem${index + 1}.jpeg`; // Gera os nomes das imagens sequencialmente
                 const imageUrl = `data/imagens/${imageName}`;
                 
                 createActivity(imageUrl, word);
-            }
+            });
         } catch (error) {
-            console.error('Erro ao carregar palavras e imagens:', error);
+            console.error('Erro ao carregar palavras:', error);
         }
     }
 
