--- a/nivelA/unidade2/Mixed Letters FIXO/index.html
+++ b/nivelA/unidade2/Mixed Letters FIXO/index.html
@@ -122,13 +122,13 @@
 
     async function loadActivities() {
         try {
-            const response = await fetch('data/words.txt');
+            const response = await fetch('unidade2/data/words.txt');
             const text = await response.text();
             const words = text.trim().split('\n');
 
             words.forEach((word, index) => {
                 const imageName = `imagem${index + 1}.jpeg`; // Gera os nomes das imagens sequencialmente
-                const imageUrl = `data/imagens/${imageName}`;
+                const imageUrl = `unidade2/data/imagens/${imageName}`;
                 
                 createActivity(imageUrl, word);
             });
