--- a/nivelA/unidade2/Mixed Letters FIXO/index.html
+++ b/nivelA/unidade2/Mixed Letters FIXO/index.html
@@ -122,13 +122,13 @@
 
     async function loadActivities() {
         try {
-            const response = await fetch('../data/words.txt'); // Subindo um nível e acessando a pasta data
+            const response = await fetch('../data1/words.txt'); // Subindo um nível e acessando a pasta data1
             const text = await response.text();
             const words = text.trim().split('\n');
 
             words.forEach((word, index) => {
                 const imageName = `imagem${index + 1}.jpeg`; // Gera os nomes das imagens sequencialmente
-                const imageUrl = `../data/imagens/${imageName}`; // Subindo um nível para acessar as imagens
+                const imageUrl = `../data1/imagens/${imageName}`; // Subindo um nível para acessar as imagens
                 
                 createActivity(imageUrl, word);
             });
