--- a/nivelA/unidade2/Mixed Letters FIXO2/index.html
+++ b/nivelA/unidade2/Mixed Letters FIXO2/index.html
@@ -122,18 +122,18 @@
 
     async function loadActivities() {
         try {
-            const response = await fetch('data/words.txt');
+            const response = await fetch('../data2/words.txt'); // Subindo um nível e acessando a pasta data2
             const text = await response.text();
-            const lines = text.trim().split('\n');
+            const words = text.trim().split('\n');
 
-            for (const line of lines) {
-                const [imageName, word] = line.split(':');
-                const imageUrl = `data/imagens/${imageName}`;
+            words.forEach((word, index) => {
+                const imageName = `imagem${index + 1}.jpeg`; // Gera os nomes das imagens sequencialmente
+                const imageUrl = `../data2/imagens/${imageName}`; // Subindo um nível para acessar as imagens
                 
                 createActivity(imageUrl, word);
-            }
+            });
         } catch (error) {
-            console.error('Erro ao carregar palavras e imagens:', error);
+            console.error('Erro ao carregar palavras:', error);
         }
     }
 
