--- a/nivelA/unidade2/Missing Word3/index.html
+++ b/nivelA/unidade2/Missing Word3/index.html
@@ -6,7 +6,7 @@
     <title>Hannah Missing Word</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             background-color: #ffebcd;
             margin: 0;
             padding: 20px;
