--- a/nivelA/unidade2/Flashcards3/index.html
+++ b/nivelA/unidade2/Flashcards3/index.html
@@ -97,7 +97,7 @@
         // Função para carregar palavras do arquivo words.txt
         async function loadWords() {
             try {
-                const response = await fetch('data/words.txt');
+                const response = await fetch('../data3/words.txt');
                 const text = await response.text();
                 return text.split('\n').filter(word => word.trim() !== '').map(word => word.trim());
             } catch (error) {
@@ -126,7 +126,7 @@
                 const cardFront = document.createElement('div');
                 cardFront.classList.add('card-front');
                 const img = document.createElement('img');
-                img.src = `data/images/imagem${index + 1}.jpeg`;  // Carrega as imagens
+                img.src = `../data3/images/imagem${index + 1}.jpeg`;  // Carrega as imagens
                 img.onerror = function() {
                     console.error(`Erro ao carregar a imagem: imagem${index + 1}.jpeg`);
                 };
@@ -139,7 +139,7 @@
                 // Ícone de som posicionado sobre o cartão
                 const playSoundIcon = document.createElement('img');
                 playSoundIcon.classList.add('play-sound');
-                playSoundIcon.src = 'data/businessman.png'; // Substitui o ícone pelo businessman.png
+                playSoundIcon.src = 'businessman.png'; // Substitui o ícone pelo businessman.png
                 playSoundIcon.alt = "Play Sound";
                 playSoundIcon.onclick = (event) => {
                     event.stopPropagation(); // Evita que o cartão gire ao clicar no ícone
