--- a/nivelA/unidade2/Flashcards/index.html
+++ b/nivelA/unidade2/Flashcards/index.html
@@ -126,7 +126,7 @@
                 const cardFront = document.createElement('div');
                 cardFront.classList.add('card-front');
                 const img = document.createElement('img');
-                img.src = `../data1/images/imagem${index + 1}.jpeg`;  // Carrega as imagens
+                img.src = `../data1/imagens/imagem${index + 1}.jpeg`;  // Carrega as imagens
                 img.onerror = function() {
                     console.error(`Erro ao carregar a imagem: imagem${index + 1}.jpeg`);
                 };
