--- a/nivelA/unidade2/MemoryGame3/index.html
+++ b/nivelA/unidade2/MemoryGame3/index.html
@@ -169,22 +169,26 @@
         let lockBoard = false;
 
         function loadCardsData(callback) {
-            fetch('palavras.txt')
+            fetch('../data3/words.txt')
                 .then(response => response.text())
                 .then(text => {
+                    const words = text.trim().split('\n');
                     const cardsArray = [];
-                    const lines = text.split('\n');
-                    for (let i = 1; i < lines.length; i++) { // start from 1 to skip header
-                        const [type, src_or_text, pair] = lines[i].split(',');
-                        if (type && src_or_text && pair) {
-                            cardsArray.push({
-                                type: type.trim(),
-                                src: type.trim() === 'image' ? src_or_text.trim() : null,
-                                text: type.trim() === 'word' ? src_or_text.trim() : null,
-                                pair: pair.trim()
-                            });
-                        }
-                    }
+
+                    words.forEach((word, index) => {
+                        const imageName = `image${index + 1}`;
+                        cardsArray.push({
+                            type: 'image',
+                            src: `../data3/imagens/imagem${index + 1}.jpeg`,
+                            pair: imageName
+                        });
+                        cardsArray.push({
+                            type: 'word',
+                            text: word.trim(),
+                            pair: imageName
+                        });
+                    });
+
                     callback(cardsArray);
                 });
         }
