--- a/nivelA/unidade2/WordSearch3/index.html
+++ b/nivelA/unidade2/WordSearch3/index.html
@@ -138,25 +138,6 @@
             <ul id="words"></ul>
         </div>
     </div>
-    <script>
-        // Função para carregar as palavras do arquivo words.txt
-        function loadWords() {
-            fetch('../data3/words.txt')
-                .then(response => response.text())
-                .then(data => {
-                    const wordsArray = data.split('\n').map(word => word.trim()).filter(word => word.length > 0);
-                    const wordsList = document.getElementById('words');
-                    wordsArray.forEach(word => {
-                        const li = document.createElement('li');
-                        li.textContent = word;
-                        wordsList.appendChild(li);
-                    });
-                })
-                .catch(error => console.error('Erro ao carregar o arquivo words.txt:', error));
-        }
-
-        // Chamar a função para carregar as palavras ao carregar a página
-        window.onload = loadWords;
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
