--- a/nivelA/unidade2/MatchingGame/index.html
+++ b/nivelA/unidade2/MatchingGame/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah Matching Game</title>
     <style>
+        /* Estilo atualizado e adicionado para a exibição da imagem e texto */
         body {
             font-family: 'Times New Roman', Times, serif;
             background-color: #f3e5f5;
@@ -23,7 +24,6 @@
             margin: 20px 0;
             text-align: center;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-            font-family: 'Times New Roman', Times, serif;
         }
 
         .container {
@@ -62,7 +62,6 @@
             color: #d84315;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease, transform 0.3s ease;
-            font-family: 'Times New Roman', Times, serif;
         }
 
         .list-item.selected {
@@ -88,54 +87,39 @@
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.3s ease;
-            font-family: 'Times New Roman', Times, serif;
         }
 
         .correct {
             background-color: #c8e6c9;
             border-color: #388e3c;
             color: #2e7d32;
-            animation: correct-bounce 0.3s ease;
         }
 
-        .correct-animate {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            max-width: 90vw;
-            max-height: 90vh;
-            transform: translate(-50%, -50%) scale(1.5);
-            background-color: #4caf50;
-            color: white;
-            z-index: 1000;
-            transition: transform 0.5s ease, opacity 0.5s ease;
-            opacity: 1;
+        .image-container {
+            text-align: center;
+            margin-top: 20px;
+            display: none;
+            flex-direction: column;
+            align-items: center;
         }
 
-        .correct-animate.fade-out {
-            opacity: 0;
-            transform: translate(-50%, -50%) scale(0.1);
+        .image-container img {
+            max-width: 80%;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
 
-        .wrong {
-            background-color: #ffcdd2;
-            border-color: #d32f2f;
-            color: #c62828;
-            animation: wrong-shake 0.3s ease;
+        .image-container h2 {
+            margin-top: 10px;
+            font-size: 2em;
+            color: #8e24aa;
         }
 
-        @keyframes correct-bounce {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
-        }
-
-        @keyframes wrong-shake {
-            0% { transform: translateX(0); }
-            25% { transform: translateX(-5px); }
-            50% { transform: translateX(5px); }
-            75% { transform: translateX(-5px); }
-            100% { translateX(0); }
+        .image-container p {
+            margin-top: 10px;
+            font-size: 1.5em;
+            color: #424242;
+            max-width: 80%;
         }
 
         .restart-btn, .back-btn {
@@ -148,7 +132,6 @@
             cursor: pointer;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease, transform 0.3s ease;
-            font-family: 'Times New Roman', Times, serif;
         }
 
         .restart-btn:hover, .back-btn:hover {
@@ -163,144 +146,166 @@
     Back
 </button>
 
-    <h1>Hannah Matching Game</h1>
+<h1>Hannah Matching Game</h1>
 
-    <div class="container">
-        <div class="list-container">
-            <div class="list" id="lessons">
-                <!-- Lessons will be loaded here dynamically -->
-            </div>
+<div class="container">
+    <div class="list-container">
+        <div class="list" id="lessons">
+            <!-- Lessons will be loaded here dynamically -->
+        </div>
 
-            <div class="list" id="explanations">
-                <!-- Explanations will be loaded here dynamically -->
-            </div>
+        <div class="list" id="explanations">
+            <!-- Explanations will be loaded here dynamically -->
         </div>
     </div>
+</div>
 
-    <button class="restart-btn" onclick="restartGame()">Restart Game</button>
+<!-- Container para mostrar a imagem e o texto -->
+<div class="image-container" id="image-container">
+    <img id="lesson-image" src="" alt="Lesson Image">
+    <h2 id="lesson-title"></h2>
+    <p id="lesson-text"></p>
+</div>
 
-    <script>
-        let selectedLeftItem = null;
-        let currentAnimatedItem = null;  // Referência ao item atualmente animado
+<button class="restart-btn" onclick="restartGame()">Restart Game</button>
 
-        // Load lessons and explanations dynamically from the text file
-        fetch('texto.txt')
-            .then(response => response.text())
-            .then(data => {
-                const lessonsContainer = document.getElementById('lessons');
-                const explanationsContainer = document.getElementById('explanations');
-                const lines = data.split('\n');
+<script>
+    let lessonData = [];
+    let selectedLeftItem = null;
+    let currentAnimatedItem = null;
 
-                const lessons = [];
-                const explanations = [];
-                lines.forEach((line, index) => {
-                    const [type, lesson, explanation] = line.split('|');
-                    if (type === 'lesson') {
-                        lessons.push({ lesson, index });
-                        explanations.push({ explanation, index });
-                    }
-                });
+    // Carregar as lições e explicações dinamicamente do arquivo texto.txt
+    fetch('texto.txt')
+        .then(response => response.text())
+        .then(data => {
+            const lines = data.split('\n');
 
-                // Shuffle lessons and explanations independently
-                shuffleArray(lessons);
-                shuffleArray(explanations);
-
-                // Populate the lessons container with shuffled lessons
-                lessons.forEach(item => {
-                    const lessonDiv = document.createElement('div');
-                    lessonDiv.classList.add('list-item');
-                    lessonDiv.textContent = item.lesson;
-                    lessonDiv.dataset.match = item.index + 1;
-                    lessonDiv.onclick = () => selectLeftItem(lessonDiv);
-                    lessonsContainer.appendChild(lessonDiv);
-                });
-
-                // Populate the explanations container with shuffled explanations
-                explanations.forEach(item => {
-                    const explanationDiv = document.createElement('div');
-                    explanationDiv.classList.add('drop-zone');
-                    explanationDiv.textContent = item.explanation;
-                    explanationDiv.dataset.match = item.index + 1;
-                    explanationDiv.onclick = () => selectRightItem(explanationDiv);
-                    explanationsContainer.appendChild(explanationDiv);
-                });
+            const lessons = [];
+            const explanations = [];
+            lines.forEach((line, index) => {
+                const [type, lesson, explanation] = line.split('|');
+                if (type === 'lesson') {
+                    lessons.push({ lesson, index });
+                    explanations.push({ explanation, index });
+                }
             });
 
-        // Shuffle array function
-        function shuffleArray(array) {
-            for (let i = array.length - 1; i > 0; i--) {
-                const j = Math.floor(Math.random() * (i + 1));
-                [array[i], array[j]] = [array[j], array[i]];
+            shuffleArray(lessons);
+            shuffleArray(explanations);
+
+            // Criar o array lessonData dinamicamente
+            for (let i = 0; i < lessons.length; i++) {
+                lessonData.push({
+                    img: `imagens/imagem${i + 1}.png`,  // Associa as imagens na sequência
+                    title: lessons[i].lesson,          // Usa a lição da coluna da esquerda
+                    text: explanations[i].explanation  // Usa a explicação da coluna da direita
+                });
             }
+
+            // Preencher as colunas com as lições e explicações embaralhadas
+            const lessonsContainer = document.getElementById('lessons');
+            const explanationsContainer = document.getElementById('explanations');
+
+            lessons.forEach(item => {
+                const lessonDiv = document.createElement('div');
+                lessonDiv.classList.add('list-item');
+                lessonDiv.textContent = item.lesson;
+                lessonDiv.dataset.match = item.index + 1;
+                lessonDiv.onclick = () => selectLeftItem(lessonDiv);
+                lessonsContainer.appendChild(lessonDiv);
+            });
+
+            explanations.forEach(item => {
+                const explanationDiv = document.createElement('div');
+                explanationDiv.classList.add('drop-zone');
+                explanationDiv.textContent = item.explanation;
+                explanationDiv.dataset.match = item.index + 1;
+                explanationDiv.onclick = () => selectRightItem(explanationDiv);
+                explanationsContainer.appendChild(explanationDiv);
+            });
+        });
+
+    function shuffleArray(array) {
+        for (let i = array.length - 1; i > 0; i--) {
+            const j = Math.floor(Math.random() * (i + 1));
+            [array[i], array[j]] = [array[j], array[i]];
         }
+    }
 
-        function removeCurrentAnimatedItem() {
-            // Remover o item animado anterior, se houver
-            if (currentAnimatedItem) {
-                currentAnimatedItem.classList.add('fade-out');
-                setTimeout(() => {
-                    currentAnimatedItem.style.display = 'none';
-                    currentAnimatedItem = null;
-                }, 500);
-            }
+    function removeCurrentAnimatedItem() {
+        if (currentAnimatedItem) {
+            currentAnimatedItem.classList.add('fade-out');
+            setTimeout(() => {
+                currentAnimatedItem.style.display = 'none';
+                currentAnimatedItem = null;
+            }, 500);
         }
+    }
 
-        function selectLeftItem(element) {
-            removeCurrentAnimatedItem();  // Remove o bloco ampliado ao clicar em qualquer outro bloco
-            if (selectedLeftItem) {
-                selectedLeftItem.classList.remove('selected');
-            }
-            selectedLeftItem = element;
-            element.classList.add('selected');
-            speakText(element);
+    function selectLeftItem(element) {
+        removeCurrentAnimatedItem();
+        if (selectedLeftItem) {
+            selectedLeftItem.classList.remove('selected');
         }
+        selectedLeftItem = element;
+        element.classList.add('selected');
+        speakText(element);
+    }
 
-        function selectRightItem(element) {
-            removeCurrentAnimatedItem();  // Remove o bloco ampliado ao clicar em qualquer outro bloco
-            if (!selectedLeftItem) return;
+    function selectRightItem(element) {
+        removeCurrentAnimatedItem();
+        if (!selectedLeftItem) return;
 
-            speakText(element);
+        speakText(element);
 
-            if (selectedLeftItem.dataset.match === element.dataset.match) {
-                animateCorrectMatch(element);
-                selectedLeftItem.classList.add('used');
-                selectedLeftItem.classList.remove('selected');
-            } else {
-                selectedLeftItem.classList.remove('selected');
-                selectedLeftItem = null;
-                element.classList.add('wrong');
-                setTimeout(() => element.classList.remove('wrong'), 1000);
-            }
+        if (selectedLeftItem.dataset.match === element.dataset.match) {
+            animateCorrectMatch(element);
+            selectedLeftItem.classList.add('used');
+            selectedLeftItem.classList.remove('selected');
+            showLessonData(element.dataset.match - 1);  // Mostrar imagem e texto correspondente
+        } else {
+            selectedLeftItem.classList.remove('selected');
+            selectedLeftItem = null;
+            element.classList.add('wrong');
+            setTimeout(() => element.classList.remove('wrong'), 1000);
         }
+    }
 
-        function animateCorrectMatch(element) {
-            // Cresce o bloco correto e move para o centro da tela
-            element.classList.add('correct-animate');
-            currentAnimatedItem = element;  // Armazena o item atualmente animado
-            const utterance = new SpeechSynthesisUtterance(element.textContent);
-            utterance.lang = 'en-US';  // Leitura em inglês
-            utterance.onend = () => {
-                element.classList.add('fade-out');
-                setTimeout(() => {
-                    element.style.display = 'none';  // Remove o bloco após a leitura
-                    currentAnimatedItem = null;  // Limpa a referência ao item animado
-                }, 500);
-            };
-            window.speechSynthesis.cancel();  // Interrompe qualquer leitura anterior
-            window.speechSynthesis.speak(utterance);
-        }
+    function animateCorrectMatch(element) {
+        element.classList.add('correct');
+        currentAnimatedItem = element;
+    }
 
-        function speakText(element) {
-            window.speechSynthesis.cancel();  // Interrompe qualquer leitura anterior
-            const text = element.textContent;
-            const utterance = new SpeechSynthesisUtterance(text);
-            utterance.lang = 'en-US';  // Leitura em inglês
-            window.speechSynthesis.speak(utterance);
-        }
+    function speakText(element) {
+        window.speechSynthesis.cancel();
+        const text = element.textContent;
+        const utterance = new SpeechSynthesisUtterance(text);
+        utterance.lang = 'en-US';
+        window.speechSynthesis.speak(utterance);
+    }
 
-        function restartGame() {
-            window.location.reload();
-        }
-    </script>
+    function showLessonData(index) {
+        const data = lessonData[index];
+        const imageContainer = document.getElementById('image-container');
+        const lessonImage = document.getElementById('lesson-image');
+        const lessonTitle = document.getElementById('lesson-title');
+        const lessonText = document.getElementById('lesson-text');
+
+        lessonImage.src = data.img;
+        lessonTitle.textContent = data.title;
+        lessonText.textContent = data.text;
+
+        imageContainer.style.display = 'flex';
+
+        // Ler o texto em voz alta
+        const utterance = new SpeechSynthesisUtterance(data.text);
+        utterance.lang = 'en-US';
+        window.speechSynthesis.speak(utterance);
+    }
+
+    function restartGame() {
+        window.location.reload();
+    }
+</script>
 </body>
 </html>
