--- a/nivelA/unidade2/MatchingGame/index.html
+++ b/nivelA/unidade2/MatchingGame/index.html
@@ -96,6 +96,12 @@
             color: #2e7d32;
         }
 
+        .wrong {
+            background-color: #ffcdd2;
+            border-color: #d32f2f;
+            color: #c62828;
+        }
+
         .image-container {
             display: none;
             position: fixed;
@@ -275,6 +281,7 @@
 
     function selectLeftItem(element) {
         removeCurrentAnimatedItem();
+        resetWrongSelections(); // Reseta qualquer seleção incorreta anterior
         if (selectedLeftItem) {
             selectedLeftItem.classList.remove('selected');
         }
@@ -287,18 +294,17 @@
         removeCurrentAnimatedItem();
         if (!selectedLeftItem) return;
 
-        speakText(element.textContent);
-
         if (selectedLeftItem.dataset.match === element.dataset.match) {
+            speakText(element.textContent); // Fala o texto quando a correspondência for correta
             animateCorrectMatch(element);
             selectedLeftItem.classList.add('used');
             selectedLeftItem.classList.remove('selected');
             showLessonData(element.dataset.match - 1);  // Mostrar imagem e texto correspondente
         } else {
+            speakText("Try again"); // Fala "Try again" quando a correspondência for errada
+            element.classList.add('wrong');
             selectedLeftItem.classList.remove('selected');
             selectedLeftItem = null;
-            element.classList.add('wrong');
-            setTimeout(() => element.classList.remove('wrong'), 1000);
         }
     }
 
@@ -315,6 +321,13 @@
         currentUtterance = new SpeechSynthesisUtterance(text);
         currentUtterance.lang = 'en-US';
         window.speechSynthesis.speak(currentUtterance);
+    }
+
+    function resetWrongSelections() {
+        const wrongSelections = document.querySelectorAll('.wrong');
+        wrongSelections.forEach(item => {
+            item.classList.remove('wrong');
+        });
     }
 
     function showLessonData(index) {
