--- a/nivelA/unidade2/MatchingGame/index.html
+++ b/nivelA/unidade2/MatchingGame/index.html
@@ -297,7 +297,7 @@
             document.getElementById('try-again').style.display = 'block'; // Mostra "Try Again"
             selectedLeftItem.classList.remove('selected');
             selectedLeftItem = null;
-            speakText(element.textContent);
+            speakText("Try Again");
         }
     }
 
