--- a/nivelA/unidade2/MatchingGame/index.html
+++ b/nivelA/unidade2/MatchingGame/index.html
@@ -227,7 +227,6 @@
         .then(data => {
             const lines = data.split('\n');
 
-            // Assumindo que as lições e explicações estejam na mesma ordem no arquivo
             lines.forEach((line, index) => {
                 const [type, lesson, explanation] = line.split('|');
                 if (type === 'lesson') {
@@ -239,26 +238,40 @@
                 }
             });
 
-            // Preencher as colunas com as lições e explicações
+            // Embaralhar as lições e explicações separadamente
+            const shuffledLessons = shuffleArray([...lessonData]);
+            const shuffledExplanations = shuffleArray([...lessonData]);
+
+            // Preencher as colunas com as lições e explicações embaralhadas
             const lessonsContainer = document.getElementById('lessons');
             const explanationsContainer = document.getElementById('explanations');
 
-            lessonData.forEach((item, index) => {
+            shuffledLessons.forEach((item, index) => {
                 const lessonDiv = document.createElement('div');
                 lessonDiv.classList.add('list-item');
                 lessonDiv.textContent = item.title;
                 lessonDiv.dataset.match = index + 1;
                 lessonDiv.onclick = () => selectLeftItem(lessonDiv);
                 lessonsContainer.appendChild(lessonDiv);
+            });
 
+            shuffledExplanations.forEach((item, index) => {
                 const explanationDiv = document.createElement('div');
                 explanationDiv.classList.add('drop-zone');
                 explanationDiv.textContent = item.text;
-                explanationDiv.dataset.match = index + 1;
+                explanationDiv.dataset.match = lessonData.findIndex(data => data.text === item.text) + 1;
                 explanationDiv.onclick = () => selectRightItem(explanationDiv);
                 explanationsContainer.appendChild(explanationDiv);
             });
         });
+
+    function shuffleArray(array) {
+        for (let i = array.length - 1; i > 0; i--) {
+            const j = Math.floor(Math.random() * (i + 1));
+            [array[i], array[j]] = [array[j], array[i]];
+        }
+        return array;
+    }
 
     function removeCurrentAnimatedItem() {
         if (currentAnimatedItem) {
