--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -10,13 +10,25 @@
             text-align: center;
             margin-top: 50px;
         }
-        .word {
-            font-size: 2em;
-            margin: 20px 0;
+        .container {
+            position: relative;
+            display: inline-block;
         }
         .image {
             width: 300px;
             height: auto;
+        }
+        .icon {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 50px;
+            height: 50px;
+            cursor: pointer;
+        }
+        .word {
+            font-size: 2em;
+            margin: 20px 0;
         }
         .result {
             font-size: 1.5em;
@@ -26,7 +38,10 @@
 </head>
 <body>
     <h1>Read the Word</h1>
-    <img id="image" class="image" src="" alt="Image">
+    <div class="container">
+        <img id="image" class="image" src="" alt="Image">
+        <img id="icon" class="icon" src="businessman.png" alt="Icon">
+    </div>
     <div class="word" id="word"></div>
     <button id="startButton">Start Reading</button>
     <div class="result" id="result"></div>
@@ -62,6 +77,8 @@
 
         const startButton = document.getElementById("startButton");
         const resultDiv = document.getElementById("result");
+        const imageElement = document.getElementById("image");
+        const iconElement = document.getElementById("icon");
 
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'en-US';
@@ -91,6 +108,22 @@
             resultDiv.textContent = "Error occurred in recognition: " + event.error;
             resultDiv.style.color = "red";
         };
+
+        // Function to read the word using Speech Synthesis
+        function readWord(word) {
+            const utterance = new SpeechSynthesisUtterance(word);
+            utterance.lang = 'en-US';
+            speechSynthesis.speak(utterance);
+        }
+
+        // Event listeners for image and icon clicks
+        imageElement.addEventListener('click', () => {
+            readWord(words[currentWordIndex]);
+        });
+
+        iconElement.addEventListener('click', () => {
+            readWord(words[currentWordIndex]);
+        });
     </script>
 </body>
 </html>
