--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -21,9 +21,9 @@
         .icon {
             position: absolute;
             top: 10px;
-            left: 10px;
-            width: 50px;
-            height: 50px;
+            right: 10px;
+            width: 40px;
+            height: 40px;
             cursor: pointer;
         }
         .word {
@@ -123,7 +123,7 @@
             recognitionTimeout = setTimeout(() => {
                 recognition.stop();
                 handleIncorrectAttempt();
-            }, 10000); // 10 seconds timeout
+            }, 5000); // 5 seconds timeout
         }
 
         function handleIncorrectAttempt() {
