--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -133,16 +133,36 @@
                 resultDiv.style.color = "red";
                 loadWord(currentWordIndex + 1);
             } else {
-                resultDiv.textContent = "Try again. Listen to the correct pronunciation of this word.";
+                const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
+                resultDiv.textContent = tryAgainMessage;
                 resultDiv.style.color = "red";
-                readWord(words[currentWordIndex]);
+                readMessage(tryAgainMessage, () => {
+                    setTimeout(() => {
+                        readWord(words[currentWordIndex], true);
+                        setTimeout(() => {
+                            resultDiv.textContent = ""; // Clear the message
+                            startRecognition(); // Allow the student to try again
+                        }, 3000); // Give time to listen to the correct pronunciation
+                    }, 2000); // 2-second delay before reading the word
+                });
             }
         }
 
+        // Function to read a message using Speech Synthesis
+        function readMessage(message, callback) {
+            const utterance = new SpeechSynthesisUtterance(message);
+            utterance.lang = 'en-US';
+            utterance.onend = callback; // Call the callback function when the message is done
+            speechSynthesis.speak(utterance);
+        }
+
         // Function to read the word using Speech Synthesis
-        function readWord(word) {
+        function readWord(word, slow = false) {
             const utterance = new SpeechSynthesisUtterance(word);
             utterance.lang = 'en-US';
+            if (slow) {
+                utterance.rate = 0.7; // Slow down the speech rate for clear pronunciation
+            }
             speechSynthesis.speak(utterance);
         }
 
