--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -86,6 +86,8 @@
 
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'en-US';
+        recognition.interimResults = false; // Only handle final results
+        recognition.maxAlternatives = 1;
 
         startButton.addEventListener('click', () => {
             startRecognition();
@@ -112,17 +114,16 @@
             clearTimeout(recognitionTimeout);
         };
 
-        recognition.onspeechend = () => {
-            clearTimeout(recognitionTimeout);
-            recognition.stop();
+        recognition.onend = () => {
+            // If recognition ends naturally (e.g., after a period of silence), handle as incorrect attempt
+            handleIncorrectAttempt();
         };
 
         function startRecognition() {
             resultDiv.textContent = "Listening...";
             recognition.start();
             recognitionTimeout = setTimeout(() => {
-                recognition.stop();
-                handleIncorrectAttempt();
+                recognition.stop(); // Force stop recognition after 5 seconds
             }, 5000); // 5 seconds timeout
         }
 
